# signet-assistant

./: Cargo.toml  README.md  block.txt
src/: balance.rs  main.rs
src/balance/: balance.rs
src/block_selection/: degraph.rs  mod.rs  parser.rs  selection.rs  test.rs  write.rs
src/spend_funds/: mod.rs  spend.rs  spend_p2wpkh.rs  spend_p2wsh.rs
