[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
csv = "1.3.1"
dotenv = "0.15.0"
hex = "0.4.3"
hex-literal = "0.4.1"
hmac = "0.12.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
ripemd = "0.1.3"
secp256k1 = "0.30.0"
serde = "1.0.218"
serde_json = "1.0.139"
sha2 = "0.10.8"
